fix to readability

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -33,7 +33,7 @@
 		text-align: left;
 
 		h1, h2, p, .button {
-			text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+			text-shadow: 2px 2px 1px rgba(0,0,0,.8);
 		}
 	}
 
